combine file-picker and mapping-selector in ILCD import wiz.
but it looks strange, need a layout mechanism that works for this